--- a/socketioDemo/chat.html
+++ b/socketioDemo/chat.html
@@ -1,43 +1,37 @@
 <html lang="en"> 
-	<head>
-		<meta charset="utf-8">
-		<title>Chat Room</title> 
-		<script src="http://211.78.254.225:8088/socket.io/socket.io.js"></script> 
-		<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-		<script>
-			var socket = io.connect('http://211.78.254.225:8088'); 
-			socket.on('connect', function() {
-				socket.emit('addme', prompt('Who are you?')); 
-			});
-			socket.on('chat',function(username, data) { 
-				var p = document.createElement('p'); 
-				p.innerHTML = username + ': ' + data;
-				document.getElementById('output').appendChild(p); 
-			});
-			window.addEventListener('load',function() { 
-				document.getElementById('sendtext').addEventListener('click',function() {
-					var text = document.getElementById('data').value; 
-					socket.emit('sendchat', text);
-					$('#data').val('');
-				}, false); 
-			}, false);
-			$(document).ready(function(){
-			
-				$('#sendtext').click(function(){
-				  $('#data').focus();
-				});
-			});
-		  
-		</script>
-	<meta charset="utf-8">
-	<title>Chat Room</title> 
-	</head>
-	<body>
-		<div id="output">
-		</div>
-		<div id="send">
-		<input type="text" id="data" size="100" /><br />
-		<input type="button" id="sendtext" value="Send Text" />
-		</div>
-	</body>
+  <head>
+    <meta charset="utf-8">
+    <title>Chat Room</title> 
+    <script src="/socket.io/socket.io.js"></script> 
+    <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+    <script>
+      var socket = io.connect('/'); 
+      socket.on('connect', function() {
+        socket.emit('addme', prompt('Who are you?')); 
+      });
+      socket.on('chat',function(username, data) { 
+        $('#output').append('<p>' + username + ': ' + data + '</p>'); 
+      });
+      $(document).ready(function(){
+        $('#sendtext').click(function(){
+          var text = $('#data').val(); 
+          socket.emit('sendchat', text);
+          $('#data').val('');
+          $('#data').focus();
+        });
+      });
+    </script>
+  <meta charset="utf-8">
+  <title>Chat Room</title> 
+  </head>
+  <body>
+    <div style="width:500px">
+    <div id="output" style="height:400px">
+    </div>
+    <div id="send">
+    <input type="text" id="data" size="80px" />
+    <input type="button" id="sendtext" value="Send" />
+    </div>
+    </div>
+  </body>
 </html>
